deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
    tier: frontend
    version: "${VERSION}"
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hello-world
      tier: frontend
  template:
    metadata:
      labels:
        app: hello-world
        tier: frontend
        version: "${VERSION}"
    spec:
      containers:
      - name: hello-world
        image: "${DOCKER_IMAGE}"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 30
      imagePullSecrets:
      - name: "${DOCKER_REGISTRY}"
