deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
    tier: frontend
    version: "${VERSION}"
  annotations:
    traefik.frontend.rule.type: pathprefix
    traefik.frontend.entryPoints: https
spec:
  rules:
  - host: "${HOSTNAME}"
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
